--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,32 +1,30 @@
 ﻿body {
     direction: rtl;
 }
-header div
-{
-    display: inline-block;
-    margin-right: 5%;
-}
 
-li
-{
-    display: inline;
-    margin-right: 5%;
-}
-
-.promotionList
-{
-    margin-right: 2%;
-}
-
-header
-{
+header  {
     background: blue;
     position: absolute;
     left: 0;
     right: 0;
-    top: 0;
     height: 64px;
 }
+
+
+header div {
+    display: inline-block;
+    margin-right: 5%;
+}
+
+li {
+    display: inline;
+    margin-right: 5%;
+}
+
+.promotionList {
+    margin-right: 2%;
+}
+
 .content {
     top: 64px;
     position: absolute;
@@ -36,15 +34,14 @@ header
     overflow: auto;
  
 }
-.main-promotion
-{
+
+.main-promotion {
     width: 65%;
     background: red;
     margin-left: 270px;
 }
 
-.seasonal
-{
+.seasonal {
     width: 30%;
     position: absolute;
     left: 10px;
@@ -58,18 +55,15 @@ header
     margin-bottom: 10%;
 }
 
-.seasonal img
-{
+.seasonal img {
     margin-bottom: 5%;
 }
 
-form
-{
+form {
     display: inline-block;
 }
 
-.search_input
-{
+.search_input {
     margin-left: -7px;
 }
 
@@ -96,7 +90,25 @@ form
     border: solid 1px #333;
     height: 248px;
     padding-right: 25px;
-    position: relative;   
+    position: relative;
+}
+
+.subtitle, .rating, .price {
+    font-size: 16px;
+}
+
+.price, .details, .details_arrow {
+    position: absolute;
+    margin-bottom: 0;
+    bottom: 5px;
+}
+
+.details {
+    left: 35px;
+}
+
+.details_arrow {
+    left: 5px;
 }
 
 .icons {
@@ -117,7 +129,7 @@ form
 .rightArrow , .leftArrow {
     height: 30px;
     width: 30px;
-    border-radius: 15px;
+    border-radius: 20px;
     border: solid 1px grey;
     position: absolute; 
     top: 50%;
@@ -143,7 +155,7 @@ form
     position: relative;
     height: 15px;
     width: 15px;
-    border-radius: 7.5px;
+    border-radius: 15px;
     bottom: 3px;
 }
 
@@ -151,7 +163,7 @@ form
     position: relative;
     height: 20px;
     width: 20px;
-    border-radius: 10px;   
+    border-radius: 30px;   
 }
 
 .point, .selectedPoint {
