--- a/views/home.html
+++ b/views/home.html
@@ -31,10 +31,17 @@
                 </div>
                 
                 
-                <h3>{{ product.title }}</h3>
-                <p>{{ product.subtitle}}</p>
-                <p>{{ product.rating}}</p>
-                <p>{{ product.price}}</p>
+                <h3 class="title">{{ product.title }}</h3>
+                <p class="subtitle">{{ product.subtitle}}</p>
+                <p class="rating">{{ product.rating}}</p>
+                <p class="price">{{ product.price}}</p>
+                <p class="details">{{ product.details}}</p>
+                <form class="details_arrow" method="get" action="#"> 
+                    <input type="submit" value=">" />
+                </form>
+                
+                
+
             </div>
 
         </div>
