--- a/app/css/app.css
+++ b/app/css/app.css
@@ -149,18 +149,19 @@ form {
 .navigationPoints {
     position: absolute;
     left: 1%;
+    height: 48px;
+    line-height: 48px;
+    font-size: 1px;
 }
 
 .point {
-    position: relative;
+    
     height: 15px;
     width: 15px;
     border-radius: 15px;
-    bottom: 3px;
 }
 
 .selectedPoint {
-    position: relative;
     height: 20px;
     width: 20px;
     border-radius: 30px;   
@@ -169,8 +170,8 @@ form {
 .point, .selectedPoint {
     border: solid 1px grey;
     background-color: grey;
-    display: inline-block;
     margin-right: 5px;
+    display: inline-block;
 }
 
 .clear:before,
