--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,27 +6,112 @@ button, input[type=submit] {
     -webkit-appearance: none;
 }
 
+a {
+    color: black;
+}
+
+.buffer {
+    background-color: grey;
+    top: 0;
+    width: 2px;
+    height: 100%;
+    margin-right: 4px;
+    margin-left: 4px;
+    font-size: 1px;
+    opacity: .75;
+}
+
+.buffer {
+    background: #b0b7c1; /* Old browsers */
+background: -moz-linear-gradient(top,  #b0b7c1 0%, #c6cdd7 51%, #e6eef9 86%, #f7f7f7 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0b7c1), color-stop(51%,#c6cdd7), color-stop(86%,#e6eef9), color-stop(100%,#f7f7f7)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0b7c1', endColorstr='#f7f7f7',GradientType=0 ); /* IE6-9 */
+
+}
+
 header  {
-    background: blue;
     position: absolute;
     left: 0;
     right: 0;
-    height: 64px;
+    height: 48px;
+    overflow: hidden;
+    line-height: 48px;
 }
 
+form {
+    margin: 0;
+}
+header {
+background: #ecf1f7; /* Old browsers */
+background: -moz-linear-gradient(top,  #ecf1f7 0%, #ecf1f7 77%, #dbe6fa 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ecf1f7), color-stop(77%,#ecf1f7), color-stop(100%,#dbe6fa)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ecf1f7', endColorstr='#dbe6fa',GradientType=0 ); /* IE6-9 */
+    
+}
 
 header div {
-    display: inline-block;
-    margin-right: 5%;
+    float: right;
+    text-align: center;
 }
 
-li {
+
+.category, .search, .hello_user {
+    margin-left: 7%;
+}
+
+.logo {
+    text-align: right;
+    margin-right: 1%;
+}
+
+.category {
+    font-size: 15px;
+}
+
+.search {
+    position: relative;
+    display: inline-block;
+}
+
+.search_button {
+    height: 30px;
+    width: 60px;
+    border-radius: 5px 0 0 5px;
+    letter-spacing: 1px;
+    color: white;
+    border: solid 1px black;
+    background-color: black;
+    z-index: 1;
+}
+
+input[type=text].search_input {
+    height: 20px;
+    width: 150px;
+    margin-top: 9px;
+    margin-left: -5px;
+    border: solid 1px grey;
+    border-radius: 0 5px 5px 0;
+    letter-spacing: 1px;
+}
+
+.cart {
+    float: left;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+.promotionList li {
     display: inline;
     margin-right: 5%;
-}
-
-.promotionList {
-    margin-right: 2%;
+    margin-bottom: 4px;
 }
 
 .content {
@@ -40,17 +125,15 @@ li {
 }
 
 .main-promotion {
-    width: 65%;
-    background: red;
-    margin-left: 270px;
+    margin-left: 260px;
 }
 
 .seasonal {
-    width: 30%;
+    width: 254px;
+    text-align: center;
     position: absolute;
     left: 10px;
     top: 0;
-    background: green;
 }
 
 .promotions {
@@ -61,14 +144,6 @@ li {
 
 .seasonal img {
     margin-bottom: 5%;
-}
-
-form {
-    display: inline-block;
-}
-
-.search_input {
-    margin-left: -7px;
 }
 
 .products-list-container {
@@ -90,7 +165,7 @@ form {
     width: 25%;
 }
 
-.productInfo {
+.product_info {
     border: solid 1px #333;
     height: 248px;
     padding-right: 25px;
@@ -101,18 +176,18 @@ form {
     font-size: 16px;
 }
 
-.price, .details, .details_arrow {
+.price, .details_button {
     position: absolute;
     margin-bottom: 0;
-    bottom: 5px;
+    bottom: 7px;
 }
 
-.details {
-    left: 35px;
-}
-
-.details_arrow {
-    left: 5px;
+.details_button {
+    height: 30px;
+    width: 30px;
+    border-radius: 5px;
+    border: solid 1px ;
+    left: 15px;
 }
 
 .icons {
@@ -130,23 +205,23 @@ form {
     top: 0;
 }
 
-.rightArrow , .leftArrow {
+.right-arrow , .left-arrow {
     height: 30px;
     width: 30px;
     border-radius: 20px;
     border: solid 1px grey;
     position: absolute; 
     top: 50%;
-    background-color: white;   
-    
+    background-color: white;
+    font-size: 30px;
+    text-align: center;  
 }
 
-.rightArrow {
+.right-arrow {
     right: 0;
-    
 }
 
-.leftArrow{
+.left-arrow{
     left: 0; 
 }
 
