--- a/views/home.html
+++ b/views/home.html
@@ -1,45 +1,5 @@
-﻿<html dir="rtl">
-	<body>
-		<div class="main-screen">
-			<div class="header">
-				<div><a href="#"><img src="img/logo.png"></a></div>
-				<div>bbb</div>
-				<div>
-					<form method="get" action="#"> 
-						<input type="submit" value="חפש" />
-						<input type="text" class="search_input" name="s" id="s" placeholder="מה תרצו לשופס?" />
-					</form>
-
-				</div>
-				<div>ccc</div>
-				<div>ddd</div>
-				<div><a href="#"><img src="img/cart.png"></a></div>
-			</div>
-
-			<div class="right-picture">
-				<ul class="r-pic">
-					<li>מצלמות במבצע</li>
-					<li>מסעדות ב 50% הנחה</li>
-					<li>קולקצית חורף 2013</li>	
-				</ul>
-				<img src="img/pic1.png">
-			</div>
-
-			<aside class="left-pictures">
-				<img src="img/pic3.png">
-				<img src="img/pic3.png">
-			</aside>
-			
-		
-			<footer class="products-list">
-				<h1>bla</h1>
-			</footer>
-			
-		</div>
-
-	</body>
-</html>
+﻿<h1>Home</h1>
 
 
 <img ng-src="{{ product.promotion}}"/>
-{{ product.name }}! 
+{{ product.name }}!
