--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,16 +1,20 @@
-﻿body {
+﻿body
+{
     direction: rtl;
 }
 
-button, input[type=submit] {
+button, input[type=submit]
+{
     -webkit-appearance: none;
 }
 
-a {
+a
+{
     color: black;
 }
 
-.buffer {
+.buffer
+{
     background-color: grey;
     top: 0;
     width: 2px;
@@ -21,19 +25,20 @@ a {
     opacity: .75;
 }
 
-.buffer {
+.buffer
+{
     background: #b0b7c1; /* Old browsers */
-background: -moz-linear-gradient(top,  #b0b7c1 0%, #c6cdd7 51%, #e6eef9 86%, #f7f7f7 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0b7c1), color-stop(51%,#c6cdd7), color-stop(86%,#e6eef9), color-stop(100%,#f7f7f7)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0b7c1', endColorstr='#f7f7f7',GradientType=0 ); /* IE6-9 */
-
+    background: -moz-linear-gradient(top, #b0b7c1 0%, #c6cdd7 51%, #e6eef9 86%, #f7f7f7 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0b7c1), color-stop(51%,#c6cdd7), color-stop(86%,#e6eef9), color-stop(100%,#f7f7f7)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #b0b7c1 0%,#c6cdd7 51%,#e6eef9 86%,#f7f7f7 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0b7c1', endColorstr='#f7f7f7',GradientType=0 ); /* IE6-9 */
 }
 
-header  {
+header
+{
     position: absolute;
     left: 0;
     right: 0;
@@ -42,46 +47,51 @@ header  {
     line-height: 48px;
 }
 
-form {
-    margin: 0;
-}
-header {
-background: #ecf1f7; /* Old browsers */
-background: -moz-linear-gradient(top,  #ecf1f7 0%, #ecf1f7 77%, #dbe6fa 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ecf1f7), color-stop(77%,#ecf1f7), color-stop(100%,#dbe6fa)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ecf1f7', endColorstr='#dbe6fa',GradientType=0 ); /* IE6-9 */
-    
-}
-
-header div {
-    float: right;
-    text-align: center;
-}
 
 
-.category, .search, .hello_user {
+header
+{
+    background: #ecf1f7; /* Old browsers */
+    background: -moz-linear-gradient(top, #ecf1f7 0%, #ecf1f7 77%, #dbe6fa 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ecf1f7), color-stop(77%,#ecf1f7), color-stop(100%,#dbe6fa)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #ecf1f7 0%,#ecf1f7 77%,#dbe6fa 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ecf1f7', endColorstr='#dbe6fa',GradientType=0 ); /* IE6-9 */
+}
+
+    header div
+    {
+        float: right;
+        text-align: center;
+    }
+
+
+.category, .search, .hello_user
+{
     margin-left: 7%;
 }
 
-.logo {
+.logo
+{
     text-align: right;
     margin-right: 1%;
 }
 
-.category {
+.category
+{
     font-size: 15px;
 }
 
-.search {
+.search
+{
     position: relative;
     display: inline-block;
 }
 
-.search_button {
+.search_button
+{
     height: 30px;
     width: 60px;
     border-radius: 5px 0 0 5px;
@@ -92,7 +102,8 @@ header div {
     z-index: 1;
 }
 
-input[type=text].search_input {
+input[type=text].search_input
+{
     height: 20px;
     width: 150px;
     margin-top: 9px;
@@ -102,33 +113,37 @@ input[type=text].search_input {
     letter-spacing: 1px;
 }
 
-.cart {
+.cart
+{
     float: left;
     margin-left: 4px;
     margin-right: 4px;
 }
 
-.promotionList li {
+.promotion-list li
+{
     display: inline;
     margin-right: 5%;
     margin-bottom: 4px;
 }
 
-.content {
+.content
+{
     top: 64px;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     overflow: auto;
- 
 }
 
-.main-promotion {
+.main-promotion
+{
     margin-left: 260px;
 }
 
-.seasonal {
+.seasonal
+{
     width: 254px;
     text-align: center;
     position: absolute;
@@ -136,67 +151,78 @@ input[type=text].search_input {
     top: 0;
 }
 
-.promotions {
+.promotions
+{
     margin-top: 2%;
     position: relative;
     margin-bottom: 10%;
 }
 
-.seasonal img {
+.seasonal img
+{
     margin-bottom: 5%;
 }
 
-.products-list-container {
+.products-list-container
+{
     position: relative;
 }
 
-.products-list {
+.products-list
+{
     width: 98%;
     position: relative;
-    right:1%;
+    right: 1%;
     top: 20px;
-    background: magenta;
 }
 
-.product {
-    background-color:white;
+.product
+{
+    background-color: white;
     float: right;
     height: 250px;
     width: 25%;
+    margin-bottom: 50px;
 }
 
-.product_info {
+.product_info
+{
     border: solid 1px #333;
     height: 248px;
     padding-right: 25px;
     position: relative;
 }
 
-.subtitle, .rating, .price {
+.subtitle, .rating, .price
+{
     font-size: 16px;
 }
 
-.price, .details_button {
+.price, .details_button
+{
     position: absolute;
     margin-bottom: 0;
     bottom: 7px;
 }
 
-.details_button {
+.details_button
+{
     height: 30px;
     width: 30px;
     border-radius: 5px;
-    border: solid 1px ;
+    border: solid 1px;
     left: 15px;
 }
 
-.icons {
+.icons
+{
     position: absolute;
     left: 5px;
     top: 5px;
 }
 
-.navigation {
+.navigation
+{
     position: absolute;
     z-index: 1;
     left: 0;
@@ -205,27 +231,31 @@ input[type=text].search_input {
     top: 0;
 }
 
-.right-arrow , .left-arrow {
+.right-arrow, .left-arrow
+{
     height: 30px;
     width: 30px;
     border-radius: 20px;
     border: solid 1px grey;
-    position: absolute; 
+    position: absolute;
     top: 50%;
     background-color: white;
     font-size: 30px;
-    text-align: center;  
+    text-align: center;
 }
 
-.right-arrow {
+.right-arrow
+{
     right: 0;
 }
 
-.left-arrow{
-    left: 0; 
+.left-arrow
+{
+    left: 0;
 }
 
-.navigationPoints {
+.navigationPoints
+{
     position: absolute;
     left: 1%;
     height: 48px;
@@ -233,32 +263,62 @@ input[type=text].search_input {
     font-size: 1px;
 }
 
-.point {
-    
+.point
+{
     height: 15px;
     width: 15px;
     border-radius: 15px;
+    margin: 2.5px 0 2.5px 0;
 }
 
-.selectedPoint {
+.selectedPoint
+{
     height: 20px;
     width: 20px;
-    border-radius: 30px;   
+    border-radius: 30px;
 }
 
-.point, .selectedPoint {
+.point, .selectedPoint
+{
     border: solid 1px grey;
     background-color: grey;
     margin-right: 5px;
     display: inline-block;
 }
 
+.chevron-up, .chevron-down {
+    text-align: center;
+    width: 98%;
+    position: relative;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: blue;
+    height: 20px;
+    
+}
+
+.chevron-up {
+   
+}
+
+.fa-chevron-right {
+    position: absolute;
+    right: 0;
+}
+
+.fa-chevron-left {
+    position: absolute;
+    left: 0;
+}
+
 .clear:before,
-.clear:after {
+.clear:after
+{
     content: " ";
     display: table;
 }
 
-.clear:after {
+.clear:after
+{
     clear: both;
 }
