--- a/views/search.html
+++ b/views/search.html
@@ -1,3 +1,14 @@
-﻿<h1>Search</h1>
+﻿<div class="chevron-up">
+    <i class="fa fa-chevron-right"></i>
+    <i class="fa fa-chevron-left"></i>
+</div>
 
-{{ name }}!
+<div class="products-list-container clear">
+    <products-list-items products="products | limitTo:products.length/2"></products-list-items>
+    <products-list-items products="products | skip:products.length/2"></products-list-items>
+</div>
+
+<div class="chevron-down">
+    <i class="fa fa-chevron-right"></i>
+    <i class="fa fa-chevron-left"></i>
+</div>
