--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="products-list-container" ng-repeat="category in categories">
+<div class="products-list-container" ng-repeat="category in promotionsCategories">
 
     <products-list category="category"></products-list>
 
