--- a/views/home.html
+++ b/views/home.html
@@ -10,8 +10,8 @@
     </div>
 
     <div class="seasonal">
-        <img ng-src="{{ seasonal_img1.promotion}}" alt="{{ seasonal_img1.name }}" />
-        <img ng-src="{{ seasonal_img2.promotion}}" alt="{{ seasonal_img2.name }}" />
+        <img ng-src="{{ seasonal_img1.promotion}}" alt="{{ seasonal_image1.name }}" />
+        <img ng-src="{{ seasonal_img2.promotion}}" alt="{{ seasonal_image2.name }}" />
 
 
     </div>
