--- a/views/search.html
+++ b/views/search.html
@@ -1,6 +1,6 @@
 ﻿<div class="chevron-up">
-    <i class="fa fa-chevron-right"></i>
-    <i class="fa fa-chevron-left"></i>
+    <i class="fa fa-chevron-right search-right-arrow"></i>
+    <i class="fa fa-chevron-left search-left-arrow"></i>
 </div>
 
 <div class="products-list-container clear">
