--- a/views/search.html
+++ b/views/search.html
@@ -12,6 +12,6 @@
 </div>
 
 <div class="chevron-down">
-    <i class="fa fa-chevron-right"></i>
-    <i class="fa fa-chevron-left"></i>
+    <i class="fa fa-chevron-right search-right-arrow"></i>
+    <i class="fa fa-chevron-left search-left-arrow"></i>
 </div>
