minor ui changes

--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 ﻿<div class="promotions">
     <div class="main-promotion">
         <ul class="promotion-list">
-            <li><b>מצלמות במבצע</b></li>
+            <li><b ng-click="changeImage()">מצלמות במבצע</b></li>
             <li><b>מסעדות ב50% הנחה</b></li>
             <li><b>קולקצית חורף 2012</b></li>
         </ul>
