--- a/app/css/app.css
+++ b/app/css/app.css
@@ -126,17 +126,19 @@ header
     margin-right: 300px;
     height: 100%;
      padding-top: 8px;
+     
 }
 
 .search-inner {
-     position: relative;
-    border: solid 1px #333;
+    position: relative;
+    box-shadow: inset -2px 2px 1px silver;
+    background-color: white;
     border-radius: 4px;
     line-height: 24px;
-    background-color: white;
     margin-left: 24px;
     margin-right: 24px;
     height: 28px;
+    
    
 }
 
@@ -157,6 +159,7 @@ form {
 
 .search-input {
     margin-left: 60px;
+   
 }
 .search-button {
     position: absolute;
@@ -178,6 +181,7 @@ form {
     font-size: 15pt;
     line-height: 20pt;
     text-indent: .2em;
+    background-color: transparent; 
 
 }
 
@@ -270,17 +274,25 @@ form {
 
 .product
 {
+    border: solid 1px lightgrey;
     background-color: white;
     float: right;
-    height: 250px;
-    width: 236px;
+    height: 248px;
+    width: 230px;
     margin-bottom: 50px;
 }
 
-.product_info
+
+
+.product-border {
+    background-color: blue;
+    margin: 2px 2px 2px 2px;
+}
+
+.product-info
 {
-    border: solid 1px #333;
-    height: 248px;
+    
+    height: 244px;
     padding-right: 25px;
     position: relative;
 }
@@ -330,7 +342,7 @@ form {
     height: 30px;
     width: 30px;
     border-radius: 20px;
-    border: solid 1px grey;
+    border: solid 1px lightgrey;
     top: 45%;
     background-color: white;
     font-size: 22pt;
