--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
 
 <div class="products-list-container" ng-repeat="category in promotionsCategories">
 
-    <products-list category="category"></products-list>
+    <products-list category="category" show-product="showProduct(product)"></products-list>
 
 </div>
 
